--- a/链表有环判断.md
+++ b/链表有环判断.md
@@ -2,9 +2,9 @@
 # 快慢指针法
   hash法的问题是，空间复杂度高；
   快满指针法：两个遍历指针，快指针每次往后移动2次，慢指针每次往后移动一次；快慢指针先后入环，入环有几种情况:  
-    - case0:快慢指针刚好相遇；  
-    - case1:快指针落后慢指针1位，快慢指针在下一次移动时相遇；  
-    - case2:快指针落后慢指针2位，快慢指针在下一次移动后变成case1;  
-    - case3:快指针落后慢指针3位，快满职责在下一次移动后变成case2;  
-    - case4:快指针落后慢指针N位，总会变成case1~case3的一种情况，因此快慢指针必然相遇；  
+    case0:快慢指针刚好相遇；  
+    case1:快指针落后慢指针1位，快慢指针在下一次移动时相遇；  
+    case2:快指针落后慢指针2位，快慢指针在下一次移动后变成case1;  
+    case3:快指针落后慢指针3位，快满职责在下一次移动后变成case2;  
+    case4:快指针落后慢指针N位，总会变成case1~case3的一种情况，因此快慢指针必然相遇；  
   
