--- a/用户增长.md
+++ b/用户增长.md
@@ -1,1 +1,6 @@
-# 
+# 字节公开资料
+  1. 字节用户增长模型，[链接](https://mp.weixin.qq.com/s?__biz=MzkwMzMwOTQwMg==&mid=2247497502&idx=1&sn=da50ae5ef7acd570efdde39a70409138&chksm=c09a862bf7ed0f3df888b66c53f2f4db25e12ff200319dea4a52086fe97475f704527ae2d1c6&scene=21#wechat_redirect)
+
+
+# 增长方法论
+
