--- a/用户增长.md
+++ b/用户增长.md
@@ -1,6 +1,17 @@
-# 字节公开资料
+# 公开资料
   1. 字节用户增长模型，[链接](https://mp.weixin.qq.com/s?__biz=MzkwMzMwOTQwMg==&mid=2247497502&idx=1&sn=da50ae5ef7acd570efdde39a70409138&chksm=c09a862bf7ed0f3df888b66c53f2f4db25e12ff200319dea4a52086fe97475f704527ae2d1c6&scene=21#wechat_redirect)
 
 
 # 增长方法论
+## 基本思路
 
+## 平台建设
+  指标观察：
+    实时指标/离线指标；
+    业务mau指标、曝点转指标、细分的分层指标
+  渠道管理；
+  供给库管理；
+  策略管理；
+  平台支撑：数据平台、算法/策略迭代、ab实验
+    
+  
