--- a/用户增长.md
+++ b/用户增长.md
@@ -6,9 +6,9 @@
 ## 基本思路
 
 ## 平台建设
-  指标与监控体系：
-    实时指标/离线指标；
-    业务mau指标、曝点转指标、细分的分层指标
+  - 指标与监控体系
+    - 实时指标/离线指标；
+    - 业务mau指标、曝点转指标、细分的分层指标
   渠道管理；
   供给库管理；
   策略管理；
