--- a/用户增长.md
+++ b/用户增长.md
@@ -7,9 +7,9 @@
 
 ## 平台建设
   - 指标与监控体系
-    - 实时指标/离线指标，即席分析工具
-    - 业务mau指标、曝点转指标、细分的分层指标
-  渠道管理；
+    - 实时指标/离线指标，即席分析工具；
+    - 业务mau指标、曝点转指标、细分的分层指标，分渠道、策略指标；
+  渠道管理
   供给库管理；
   策略管理；
   平台支撑：数据平台、算法/策略迭代、ab实验
